--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,11 +55,13 @@
     <string name="goods_detail">商品详情</string>
     <string name="goodsSort">类别</string>
     <string name="bt_publish">发布</string>
-    <string name="details">详情</string>
+    <string name="details">详情:</string>
     <string name="detailsContent">具体内容...</string>
-    <string name="sellerPhoneNumber">联系电话</string>
-    <string name="location">地址</string>
+    <string name="sellerPhoneNumber">联系电话:</string>
+    <string name="location">地址:</string>
     <string name="buy">立即购买</string>
+    <string name="goodsImg">添加图片</string>
+    <string name="delivery2">送货方式:</string>
 
 
 </resources>
